--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=PCW;Database=ProductDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "DevConnection": "Server=PCW;Database=ProductDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;"
   }
 }
